# BetterAltTab

./: .gitignore  CMakeLists.txt  NOTES.txt  config.json  imgui.ini
Release_Template/: Release_Notes.txt
src/: main.cpp
src/core/: application.cpp  application.hpp  config.cpp  config.hpp  im_window.hpp  imgui_ui.cpp  imgui_ui.hpp  resources.h  timers.hpp  widget_container.cpp  widget_container.hpp  widget_layer.cpp  widget_layer.hpp  widget_types.hpp  win_utils.cpp  win_utils.hpp  windows_helpers.cpp  windows_helpers.hpp
src/imgui/: imgui.cpp  imgui_internal.h
src/json/: json_reader.hpp
src/old/: im_window.cpp
src/utils/: json_reader.hpp  resources.rc
